# GPSEmulator

./: CMakeLists.txt  README.md  emulator.conf
src/: ConfigLoader.cpp  ConfigLoader.hpp  FaultInjector.cpp  FaultInjector.hpp  GPSDevice.cpp  GPSDevice.hpp  ITransport.hpp  SerialPort.cpp  SerialPort.hpp  UDPTransport.cpp  UDPTransport.hpp  main.cpp
